[profile.release-with-debug]
inherits = "release"
debug = true
overflow-checks = true

[package]
name = "minesweeper_solver_in_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "my_benchmark"
harness = false

[[bench]]
name = "framerate_benchmarks"
harness = false

[dependencies]
# scrap = "0.5.0"
captrs = "0.3.1"
image = "0.24.0"
# imageproc = "0.23.0"
enigo = "0.0.14"
enum-iterator = "1.2.0"
itertools = "0.10.5"
rand = "0.8.5"
