[profile.release-with-debug]
inherits = "release"
debug = true
overflow-checks = true

[package]
name = "minesweeper_solver_in_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = "0.4"
rayon = "1.6.1"

[[bench]]
name = "my_benchmark"
harness = false

[[bench]]
name = "framerate_benchmarks"
harness = false

[dependencies]
ahash = { version = "0.8.3", default-features = false }
bitvec = "1.0.1"
cached = { version = "0.42.0", default-features = false, features = ["proc_macro"] }
captrs = "0.3.1"
enigo = "0.0.14"
enum-iterator = "1.2.0"
image = "0.24.0"
itertools = { version = "*", git = "https://github.com/Easyoakland/itertools", branch = "initial_lending_iterator_support", features = ["default", "lending_iters"] }
rand = "0.8.5"
